--- a/service-a/html/index.html
+++ b/service-a/html/index.html
@@ -19,7 +19,7 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h4>Hi Revolgy!</h4>
+        <h4>Hi, Folks!</h4>
         <p>This is being served from <strong>Service A</strong> in Docker container.</p>
       </div>
     </div>
